--- a/app/views/activity.html
+++ b/app/views/activity.html
@@ -1,1 +1,144 @@
-<p>This is the about view.</p>
+<div class="row">
+  <div class="col-xs-12">
+    <h4>Activity Summary</h4>
+  </div>
+</div>
+<br/>
+
+<div class="row well">
+  <div class="col-xs-3">
+    <img src="images/green.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Sleeping</em>
+  </div>
+  <div class="col-xs-3">
+    <img src="images/yellow.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Idle</em>
+  </div>
+  <div class="col-xs-3">
+    <img src="images/orange.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Agitated</em>
+  </div>
+  <div class="col-xs-3">
+    <img src="images/red.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Fall</em>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-5">
+    <span class="text-muted">From Aug 24, 2015</span>
+  </div>
+  <div class="col-xs-2">
+  </div>
+  <div class="col-xs-5">
+    <span class="pull-right text-muted"> To Aug 30, 2015 </span>
+  </div>
+</div>
+<hr/>
+<div class="row">
+  <div class="col-xs-1">
+    
+  </div>
+  <div class="col-xs-11">
+  	<div class="col-xs-1">
+  		<small>00:00</small>
+  	</div>
+  	<div class="col-xs-4">
+  		
+  	</div>
+  	<div class="col-xs-2">
+  		<center><small>12:00</small></center>
+  	</div>
+  	<div class="col-xs-4">
+  		
+  	</div>
+  	<div class="col-xs-1">
+  		<span class="pull-right"><small>11:59</small></span>
+  	</div>
+  </div>
+</div>
+<br/>
+<div class="row">
+  <div class="col-xs-1">
+    Mon
+  </div>
+  <div class="col-xs-11">
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		W
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		W
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		F
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  </div>
+</div>
+<div class="ct-spacer"> </div>
+<div class="row">
+  <div class="col-xs-1">
+    Tue
+  </div>
+  <div class="col-xs-11">
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		S
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		W
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		W
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		F
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		I
+  	</div>
+  </div>
+</div>
+<br/>
