--- a/app/views/activity.html
+++ b/app/views/activity.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <h4>Activity Summary</h4>
+    <h4><span class="glyphicon glyphicon-stats"></span> Activity Summary</h4>
   </div>
 </div>
 <br/>
@@ -22,12 +22,12 @@
 
 <div class="row">
   <div class="col-xs-5">
-    <span class="text-muted">From Aug 24, 2015</span>
+    <span class="text-muted"><span class="glyphicon glyphicon-chevron-left"></span> From Aug 24, 2015</span>
   </div>
   <div class="col-xs-2">
   </div>
   <div class="col-xs-5">
-    <span class="pull-right text-muted"> To Aug 30, 2015 </span>
+    <span class="pull-right text-muted"> To Aug 28, 2015 <span class="glyphicon glyphicon-chevron-right"></span></span>
   </div>
 </div>
 <hr/>
@@ -59,41 +59,41 @@
     Mon
   </div>
   <div class="col-xs-11">
-  	<div class="col-xs-1 ct-cell-green">
-  		I
+  	<div class="col-xs-1 ct-cell-yellow">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		I
+
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		S
+
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		S
+
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		S
+
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		S
+
   	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		S
+  	<div class="col-xs-1 ct-cell-orange">
+
   	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		W
+  	<div class="col-xs-1 ct-cell-orange">
+
   	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		W
+  	<div class="col-xs-1 ct-cell-yellow">
+
   	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		I
+  	<div class="col-xs-1 ct-cell-red">
+  		
   	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		F
-  	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		I
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
   	</div>
   </div>
 </div>
@@ -104,41 +104,175 @@
   </div>
   <div class="col-xs-11">
   	<div class="col-xs-1 ct-cell-green">
-  		I
+  		
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		I
+  		
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		S
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-red">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-red">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		S
+  		
   	</div>
   	<div class="col-xs-1 ct-cell-green">
-  		S
+  		
   	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		S
+  	<div class="col-xs-1 ct-cell-orange">
+  		
   	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		S
-  	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		W
-  	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		W
-  	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		I
-  	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		F
-  	</div>
-  	<div class="col-xs-1 ct-cell-green">
-  		I
+  	<div class="col-xs-1 ct-cell-orange">
+  		
   	</div>
   </div>
 </div>
+<div class="ct-spacer"> </div>
+<div class="row">
+  <div class="col-xs-1">
+    Wed
+  </div>
+  <div class="col-xs-11">
+  	<div class="col-xs-1 ct-cell-green">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+
+  	</div>
+  </div>
+</div>
+<div class="ct-spacer"> </div>
+<div class="row">
+  <div class="col-xs-1">
+    Thu
+  </div>
+  <div class="col-xs-11">
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-red">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  </div>
+</div>
+<div class="ct-spacer"> </div>
+<div class="row">
+  <div class="col-xs-1">
+    Fri
+  </div>
+  <div class="col-xs-11">
+  	<div class="col-xs-1 ct-cell-green">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-red">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-red">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-yellow">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-green">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  	<div class="col-xs-1 ct-cell-orange">
+  		
+  	</div>
+  </div>
+</div>
+
+<br/>
 <br/>
