--- a/app/views/activity.html
+++ b/app/views/activity.html
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-xs-12">
-    <h4><span class="glyphicon glyphicon-stats"></span> Activity Summary</h4>
+    <h4><span class="glyphicon glyphicon-stats"></span> Recent Summary</h4>
   </div>
 </div>
 <br/>
 
 <div class="row well">
   <div class="col-xs-3">
-    <img src="images/green.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Sleeping</em>
+    <img src="images/green.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Idle & Sleep</em>
   </div>
   <div class="col-xs-3">
-    <img src="images/yellow.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Idle</em>
+    <img src="images/yellow.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Moving</em>
   </div>
   <div class="col-xs-3">
     <img src="images/orange.png" class="ct-legend"></img> &nbsp;&nbsp;<em>Agitated</em>
@@ -97,7 +97,7 @@
   	</div>
   </div>
 </div>
-<div class="ct-spacer"> </div>
+<br/>
 <div class="row">
   <div class="col-xs-1">
     Tue
@@ -141,7 +141,7 @@
   	</div>
   </div>
 </div>
-<div class="ct-spacer"> </div>
+<br/>
 <div class="row">
   <div class="col-xs-1">
     Wed
@@ -185,7 +185,7 @@
   	</div>
   </div>
 </div>
-<div class="ct-spacer"> </div>
+<br/>
 <div class="row">
   <div class="col-xs-1">
     Thu
@@ -229,7 +229,7 @@
   	</div>
   </div>
 </div>
-<div class="ct-spacer"> </div>
+<br/>
 <div class="row">
   <div class="col-xs-1">
     Fri
