--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <h4><span class="glyphicon glyphicon-heart-empty"></span> Current Status <small class="pull-right">{{clock}}</small></h4>
+    <h4><span class="glyphicon glyphicon-heart-empty"></span> Current Activity <small class="pull-right">{{clock}}</small></h4>
   </div>
 </div>
 <br/>
@@ -24,7 +24,7 @@
       <center>
           <img class="ct-state" src="images/walk.png">
         </br/><br/>
-          <h4 class="text-success">Walking <small>since {{currStateTime}}</small></h4>
+          <h4 class="text-success">Moving <small>since {{currStateTime}}</small></h4>
       </center>
     </div>
     <div ng-show="currState == 'Aggitated'">
