--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,11 +27,11 @@
           <h4 class="text-success">Moving <small>since {{currStateTime}}</small></h4>
       </center>
     </div>
-    <div ng-show="currState == 'Aggitated'">
+    <div ng-show="currState == 'Agitated'">
       <center>
           <img class="ct-state" src="images/aggitated.png">
         </br/><br/>
-          <h4 class="text-danger">Aggitated, go help! <small>since {{currStateTime}}</small></h4>
+          <h4 class="text-danger">Agitated, go help! <small>since {{currStateTime}}</small></h4>
       </center>
     </div>
   </div>
